# tree-sitter-tcss

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_css/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCSSTests/: TreeSitterCSSTests.swift
examples/: atom.io.css  github.com.css
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: declarations.txt  statements.txt
